--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "http-server": "^0.8.5"
   },
   "repository": {
@@ -20,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/kasselTrankos/functional----case-study/issues"
   },
-  "homepage": "https://github.com/kasselTrankos/functional----case-study#readme"
+  "homepage": "https://github.com/kasselTrankos/functional----case-study#readme",
+  "dependencies": {
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
+    "immutable": "^3.8.1",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.9.0"
+  }
 }
