--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "http-server": "^0.8.5"
+    "http-server": "^0.8.5",
+    "immutable": "^3.8.1"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,11 @@
   "bugs": {
     "url": "https://github.com/kasselTrankos/functional----case-study/issues"
   },
-  "homepage": "https://github.com/kasselTrankos/functional----case-study#readme"
+  "homepage": "https://github.com/kasselTrankos/functional----case-study#readme",
+  "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
+    "watchify": "^3.9.0"
+  }
 }
