--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "http-server": "^0.8.5",
-    "immutable": "^3.8.1"
+    "immutable": "^3.8.1",
+    "vinyl-source-stream": "^1.1.0"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
+    "vue": "^2.3.4",
     "watchify": "^3.9.0"
   }
 }
