--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-vue-jsx": "^3.4.3",
     "coffee-script": "^1.12.6",
     "http-server": "^0.8.5",
     "immutable": "^3.8.1",
@@ -29,6 +30,8 @@
   },
   "homepage": "https://github.com/kasselTrankos/functional----case-study#readme",
   "dependencies": {
+    "babel-helper-vue-jsx-merge-props": "^2.0.2",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
