--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
+    "redux": "^3.7.1",
+    "redux-immutable": "^4.0.0",
     "vue": "^2.3.4",
     "watchify": "^3.9.0"
   }
