--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.4.3",
     "coffee-script": "^1.12.6",
@@ -19,7 +20,8 @@
     "redux": "^3.7.1",
     "stylus": "^0.54.5",
     "vinyl-source-stream": "^1.1.0",
-    "vueify": "^9.4.1"
+    "vueify": "^9.4.1",
+    "vuex": "^2.3.1"
   },
   "repository": {
     "type": "git",
