--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.4.3",
     "coffee-script": "^1.12.6",
-    "http-server": "^0.8.5",
     "immutable": "^3.8.1",
     "jade": "^1.11.0",
     "redux": "^3.7.1",
@@ -43,6 +42,7 @@
     "redux": "^3.7.1",
     "redux-immutable": "^4.0.0",
     "vue": "^2.3.4",
+    "vue-router": "^2.7.0",
     "watchify": "^3.9.0"
   }
 }
